--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -9,28 +9,30 @@
 
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/pendingText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="TextView" />
+        android:layout_weight="0"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:gravity="center"
+        android:layout_weight="2">
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/uppercaseButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Button" />
+            android:text="@string/uppercase" />
 
         <Button
-            android:id="@+id/button2"
+            android:id="@+id/reverseButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Button" />
+            android:text="@string/reverse" />
     </LinearLayout>
 </LinearLayout>
